--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@tiptap/extension-highlight": "^2.5.9",
         "@tiptap/extension-list-item": "^2.5.9",
         "@tiptap/extension-ordered-list": "^2.5.9",
+        "@tiptap/extension-placeholder": "^2.6.2",
         "@tiptap/extension-strike": "^2.5.9",
         "@tiptap/extension-text-align": "^2.5.9",
         "@tiptap/extension-underline": "^2.5.9",
